src/style/pages.css
/* Home */
.icon-btn {
  @apply transition cursor-pointer rounded-full bg-black p-3 text-s text-white duration-300;
}

.icon-btn:hover {
  @apply bg-highlight;
}

/* ABOUT */

.profile-pic {
  max-width: 20rem;
  max-height: 20rem;
  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
  animation: profile-breathe infinite 4s;
  animation-direction: alternate;
}

@keyframes profile-breathe {
  100% {
    border-radius: 77% 23% 65% 35% / 20% 63% 37% 80%;
  }
}

.skill {
  @apply text-l text-black;
}

.profile-button {
  @apply whitespace-no-wrap transition my-auto w-40 cursor-pointer rounded-md bg-black py-2 px-5 text-center text-s font-bold text-white duration-300;
}

.profile-button:hover {
  @apply bg-highlight;
}

/* PROJECTS */
.project-pic {
  width: 17em;
  height: 17em;
  padding: 0.5rem;
  border-radius: 2em;
  @apply transition object-cover duration-300;
}

.project-pic:hover {
  @apply cursor-pointer opacity-75;
}

/* RESUME */
.position-circle {
  width: 2em;
  height: 2em;
}

.position-edge {
  width: 0.125em;
  min-height: 100%;
}

/* CONTACT */

.contact-icon {
  font-size: var(--s);
  @apply mx-auto;
}

.contact {
  @apply transition flex w-1/3 flex-col items-center justify-center text-s text-white duration-300;
}

.contact:hover {
  @apply cursor-pointer text-highlight;
}

